# planets_wgpu

./: Cargo.toml  README.md
src/: main.rs
src/collections/: consts.rs  mod.rs  structs.rs
src/init/: init_functions.rs  mod.rs  projection.rs
src/shaders/: frag.wgsl
src/shaders/compute/: generate_terrain.wgsl
src/shaders/fragment/: slime_frag.wgsl
src/state/: app_state.rs  control_state.rs  mod.rs
src/updates/: param_updates.rs
